V0.9.0
- Release for F1 25

V0.80
- Release for F1 24

V0.62
- Fixed UDP Button 1 random detection, by wrongly interpret PacketEventData
- (probably) Fixed all rounding issues with internal floating point representation of lap times 

V0.61
- Fixed detection of generic multiplayer name

V0.60
- Update to 2022 telemetry version
- UI appearance
- update toolset (VC++ 2022 / .net 4.7.2)

V0.50
- Fixed Drivername mapping may not fetch the correct name at the beginning of a session
- If a Drivername mapping is active, single drivers can be remapped by right click and selected from any mapping entry

V0.40
- Added function to map Player by Team and Driver Nr.
 - For this to work the file namemappings.json needs to be placed in the program folder
 - Mappings can be toggled by pressing "m" (Window needs focus)
- Added function to show delta to leader
 - Use "d" + "l" to enable/disable "Leader" and "Delta columns"
- Display useful information during Qualifying (best Lap + delta)

V0.30
- Fixed players own penalty time not taken into account when calculating delta times
- Added function to export race result in plain text file

V0.20
- Updated Raceboard appearance
- Added Pit penaties in raceboard
   - SG = Stop + Go (5 sec)
   - DT = Drive Through
   - served penalties in parenthesis

- Removed tyrewear from raceboard
- Added Tyre history to raceboard
- Added Tyre age to raceboard
- Change license to GPL V3

V0.10
- Initial Version for F1 2020