@@ -1,5 +1,12 @@
 V0.9.0
 - Release for F1 25
+- Added Trackmap ("Circle of Doom") which is displayed alongside with the car status
+- Support for "purple sector" in Q
+- Update Render Layout, tested resolutions:
+  - 1440p
+  - 1080p
+  - 1080p tilted
+  - 1280x1024 
 
 V0.80
 - Release for F1 24
